# ot_harjoitustyo

./: .gitignore  README.md  pyproject.toml  tasks.py
data/: schema.sql  testitili.csv
dokumentaatio/: README.md  arkkitehtuuri.md  kayttoohje.md  testaus.md  tyoaikakirjanpito.md  vaatimusmaarittely.md
laskarit/viikko1/: git_log.txt  komentorivi.txt
laskarit/viikko2/Unicafe/src/test/java/com/mycompany/unicafe/: KassapaateTest.java  MaksukorttiTest.java
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/: .coverage
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
src/: database_connection.py  index.py  initialize_database.py
src/entities/: user.py
src/repositories/: fake_transaction_repository.py  fake_user_repository.py  transaction_repository.py  user_repository.py
src/services/: service.py  transaction_service.py  user_service.py
src/tests/: initialize_database_test.py  service_test.py  transaction_repository_test.py  transaction_service_test.py  user_repository_test.py  user_service_test.py  user_test.py
src/ui/: add_transaction_view.py  logged_in_menu_view.py  login_view.py  register_view.py  search_view.py  ui.py
