[tool.poetry]
name = "ot_harjoitustyo"
version = "0.1.0"
description = ""
authors = ["Sonja Madetoja <sonja.madetoja@helsinki.fi>"]

[tool.poetry.dependencies]
python = "^3.8"
invoke = "^1.6.0"
plotly = "^5.4.0"
pandas = "^1.3.4"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pylint = "^2.11.1"
coverage = "^6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
